<resources>
    <string name="app_name">Carupah</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_detect">Deteksi</string>
    <string name="title_location">Lokasi</string>
    <string name="title_profile">Profile</string>

    //Auth
    <string name="title_reg1">Buat Akun</string>
    <string name="title_reg2">Masukkan data untuk membuat akun</string>
    <string name="title_log1">Masuk</string>
    <string name="title_log2">Masukkan email dan kata sandi</string>
    <string name="hint_name">Nama</string>
    <string name="hint_email">Email</string>
    <string name="hint_no">No Telepon</string>
    <string name="hint_password">Password</string>
    <string name="hint_confpass">Konfirmasi Password</string>
    <string name="confirm">Dengan melanjutkan, Anda menyetujui Persyaratan Layanan kami dan Kebijakan Privasi</string>
    <string name="join">Bergabung</string>
    <string name="or_join">------ Atau bergabung dengan ------</string>
    <string name="or_login">------ Atau masuk dengan ------</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="login_here">Masuk disini</string>
    <string name="forgot_pass">Lupa Password?</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="join_here">Daftar disini</string>
    <string name="must_filled">Tidak Boleh Kosong!</string>
    <string name="min_password">minimal 8 karakter!</string>
    <string name="email_taken">Email Sudah Digunakan!</string>
    <string name="succeed">Berhasil Bergabung!</string>
    <string name="not_matched">Format Tidak Sesuai</string>
    <string name="login_failed">Login Gagal</string>
    <string name="login_succeed">Login Berhasil</string>

    //Home
    <string name="search_hint">Cari cara daur ulang sampah</string>
    <string name="bs_button">Dimana Bank Sampah Terdekat Saya?</string>
    <string name="du_button">Bagaimana Cara Mendaur Ulang Sampah Saya?</string>
    <string name="track_rv">Tracking Pengelolaan Sampah Ku</string>
    <string name="searchBS_hint">Cari Bank Sampah Terdekat</string>
    <string name="recycle">Daur Ulang</string>
    <string name="bank_sampah">Bank Sampah</string>
    <string name="coin">Koin Bank Sampah</string>
    <string name="exchange"> Tukar Koin </string>
    <string name="balance">Rp 0</string>
    <string name="explore">Ayo eksplorasi tentang pengelolaan sampah</string>
    <string name="waste_activity">Lihat aktivitas pengelolaan sampah</string>
    <string name="notif">Notifikasi</string>
    <string name="notif_hint"> Koin masuk Rp 0</string>
    <string name="date">00/00/0000</string>
    <string name="back">back</string>

    //BankSampah
    <string name="bs_name">Nama Bank Sampah</string>
    <string name="bs_desc">Deskripsi </string>
    <string name="bs_address">Alamat </string>
    <string name="bs_open">Jam buka</string>
    <string name="bs_phone">Nomor Telepon</string>
    <string name="bs_link_add">Link Alamat</string>
    <string name="bs_link_wa">Link Whatsapp</string>
    <string name="bs_email">Email</string>

    //DaurUlang
    <string name="rec_name">Judul Daur Ulang</string>
    <string name="rec_desc">Deskripsi</string>
    <string name="rec_author">Nama Penulis</string>

    //Detect
    <string name="img_detect">Deteksi Gambar</string>
    <string name="det_title">Kenali Jenis Sampah Anda</string>
    <string name="choose">Pilih Gambar</string>
    <string name="take_pict">Ambil Foto</string>
    <string name="take_gal">Ambil dari gallery</string>
    <string name="detect_result">Hasil Deteksi</string>
    <string name="class_resul">Hasil Klasifikasi</string>
    <string name="waste_result">Jenis Sampah</string>
    <string name="diy_idea">Ide DIY</string>
    <string name="imageTaken">Hasil Gambar</string>
    <string name="error">Gambar belum dipilih</string>

    //CarupAI
    <string name="carupai">CarupAI</string>
    <string name="ask">Silahkan Bertanya</string>
    <string name="send">Kirim</string>

    //Profile
    <string name="my_account">Akun Saya</string>
    <string name="my_name">Nama</string>
    <string name="change_prof">Ubah Profil</string>
    <string name="change_pass">Ubah Kata Sandi</string>
    <string name="regis_bs">Daftar Menjadi Bank Sampah</string>
    <string name="logout">Log Out</string>
    <string name="city">Kota/Kabupaten</string>
    <string name="subdistrict">Kecamatan</string>
    <string name="village">Desa/ Kelurahan</string>
    <string name="Address">Alamat</string>
    <string name="old_pass">Kata Sandi Lama</string>
    <string name="new_pass">Kata Sandi Baru</string>
    <string name="conf_pass">Konirmasi Kata Sandi Baru</string>
    <string name="input">Masukkan kata sandi baru Anda</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>