<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_detect"
        android:icon="@drawable/ic_detect"
        android:title="@string/title_detect" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/carup_logo"
        android:title="@string/carupai" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_location"
        android:title="@string/title_location" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account"
        android:title="@string/title_profile" />

</menu>