<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.carupahmobiledev.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    <action
        android:id="@+id/action_navigation_home_to_navigation_profile"
        app:destination="@id/navigation_profile" />
    <action
        android:id="@+id/action_navigation_home_to_navigation_chat"
        app:destination="@id/navigation_chat" />
    <action
        android:id="@+id/action_navigation_home_to_navigation_location"
        app:destination="@id/navigation_location" />
    <action
        android:id="@+id/action_navigation_home_to_navigation_detect"
        app:destination="@id/navigation_detect" />
    </fragment>


    <fragment
        android:id="@+id/navigation_detect"
        android:name="com.carupahmobiledev.ui.detection.DetectFragment"
        android:label="@string/title_detect"
        tools:layout="@layout/fragment_detect" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.carupahmobiledev.ui.chatbot.ChatbotFragment"
        android:label="@string/carupai"
        tools:layout="@layout/fragment_chatbot"/>

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.carupahmobiledev.ui.location.LocationFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.carupahmobiledev.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>