<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_rec"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/search_bg"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/bsName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_medium"
            android:text="@string/bs_name"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/I800"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/desc_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/worksans_medium"
            android:text="@string/notif_hint"
            android:textColor="@color/I800"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/bsName" />

        <TextView
            android:id="@+id/author_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/worksans_medium"
            android:text="@string/date"
            android:textAlignment="textEnd"
            android:textColor="@color/I400"
            card_view:layout_constraintEnd_toEndOf="parent"

            card_view:layout_constraintTop_toBottomOf="@+id/bsName" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>